--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="./index.html"><font color="white">Shannon Lin</font></a>
+                        <a class="nav-brand" href="./index.html"><font color="white">SL</font></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -136,7 +136,7 @@
             </div>
 
             <!-- Single Slide -->
-            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/art1.png);">
+            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(img/bg-img/art3.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <!-- Welcome Text -->
