updated insta feed

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="single-instagram-item">
                 <img src="img/insta/insta2.jpg" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/p/B1P30YFlNDX/">
                         <i class="ti-instagram" aria-hidden="true"></i>
                         <span>@shanngens</span>
                     </a>
@@ -192,9 +192,9 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/bg-img/13.jpg" alt="">
+                <img src="img/insta/insta3.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/p/Bz6zC3NFvvl/">
                         <i class="ti-instagram" aria-hidden="true"></i>
                         <span>@shanngens</span>
                     </a>
@@ -202,9 +202,9 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/bg-img/14.jpg" alt="">
+                <img src="img/insta/insta4.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/p/Bww-8_Bg90r/">
                         <i class="ti-instagram" aria-hidden="true"></i>
                         <span>@shanngens</span>
                     </a>
@@ -212,9 +212,9 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/bg-img/15.jpg" alt="">
+                <img src="img/insta/insta5.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/p/B1kWHPSFMUk/">
                         <i class="ti-instagram" aria-hidden="true"></i>
                         <span>@shanngens</span>
                     </a>
@@ -222,9 +222,9 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/bg-img/16.jpg" alt="">
+                <img src="img/insta/insta6.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
-                    <a href="#">
+                    <a href="https://www.instagram.com/p/BzUKL2SlsY2/">
                         <i class="ti-instagram" aria-hidden="true"></i>
                         <span>@shanngens</span>
                     </a>
