bug fix, part 2/a million

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="instragram-feed-area owl-carousel">
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="img/insta/insta1.png" alt="">
+                <img src="img/insta/insta1new.png" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="https://www.instagram.com/p/BvFjCk9AML6/">
                         <i class="ti-instagram" aria-hidden="true"></i>
