final commit of the night prob

--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,9 @@
                     <div class="alime-projects-menu">
                         <div class="portfolio-menu text-center">
                             <button class="btn active" data-filter="*">All</button>
-                            <button class="btn" data-filter=".human">AP Art</button>
+                            <button class="btn" data-filter=".portfolio">Portfolio</button>
+                            <button class="btn" data-filter=".breadth">AP Studio Art 2D: Breadth</button>
+                            <button class="btn" data-filter=".concentration">AP Studio Art 2D: Concentration</button>
                         </div>
                     </div>
                 </div>
