first draft of concentration portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -130,21 +130,11 @@
 
             <div class="row alime-portfolio">
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/3.jpg" alt="">
+                        <img src="img/concentration/con1.png" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/3.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/4.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/4.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/3.jpg" class="portfolio-img">1</a>
                         </div>
                     </div>
                 </div>
@@ -154,7 +144,17 @@
                     <div class="single-portfolio-content">
                         <img src="img/bg-img/5.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/4.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/concentration/con2.png" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/5.jpg" class="portfolio-img">2</a>
                         </div>
                     </div>
                 </div>
@@ -180,21 +180,31 @@
                 </div>
 
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/8.jpg" alt="">
+                        <img src="img/concentration/con3.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/8.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/8.jpg" class="portfolio-img">3</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/10.jpg" alt="">
+                        <img src="img/concentration/con4.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/10.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/10.jpg" class="portfolio-img">4</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/concentration/con5.png" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/37.jpg" class="portfolio-img">5</a>
                         </div>
                     </div>
                 </div>
@@ -210,21 +220,21 @@
                 </div>
 
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-6 single_gallery_item video country mb-30 wow fadeInUp" data-wow-delay="100ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/36.jpg" alt="">
+                        <img src="img/bg-img/5.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/36.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/37.jpg" alt="">
+                        <img src="img/concentration/con6.png" alt="">
                         <div class="hover-content">
-                            <a href="img/bg-img/37.jpg" class="portfolio-img">+</a>
+                            <a href="img/bg-img/5.jpg" class="portfolio-img">6</a>
                         </div>
                     </div>
                 </div>
@@ -235,6 +245,53 @@
                         <img src="img/bg-img/5.jpg" alt="">
                         <div class="hover-content">
                             <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/concentration/con7.png" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/5.jpg" class="portfolio-img">7</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Gallery Item -->
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/concentration/con8.png" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/5.jpg" class="portfolio-img">8</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/bg-img/5.jpg" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/concentration/con9.png" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/5.jpg" class="portfolio-img">9</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="single-portfolio-content">
+                        <img src="img/concentration/con10.png" alt="">
+                        <div class="hover-content">
+                            <a href="img/bg-img/5.jpg" class="portfolio-img">10</a>
                         </div>
                     </div>
                 </div>
