I'm ready to question all my life choices after the css I've had to do

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,20 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-
+    <style>
+      #mustbecol1[style] {
+        left: 0% !important;
+      }
+      #mustbecol2[style] {
+        left: 25% !important;
+      }
+      #mustbecol3[style] {
+        left: 49.9999% !important;
+      }
+      #mustbecol4[style] {
+        left: 74.9999% !important;
+      }
+    </style>
 </head>
 
 <body>
@@ -130,9 +143,9 @@
 
             <div class="row alime-portfolio">
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="100ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con1.png" alt="">
+                        <img src="img/concentration/con1s.png" alt="">
                         <div class="hover-content">
                             <a href="img/bg-img/3.jpg" class="portfolio-img">1</a>
                         </div>
@@ -140,19 +153,9 @@
                 </div>
 
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/5.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/4.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con2.png" alt="">
+                        <img src="img/concentration/con2s.png" alt="">
                         <div class="hover-content">
                             <a href="img/bg-img/5.jpg" class="portfolio-img">2</a>
                         </div>
@@ -160,29 +163,9 @@
                 </div>
 
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-30 wow fadeInUp" data-wow-delay="700ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/6.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/6.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/7.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/7.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con3.jpg" alt="">
+                        <img src="img/concentration/con3s.jpg" alt="">
                         <div class="hover-content">
                             <a href="img/bg-img/8.jpg" class="portfolio-img">3</a>
                         </div>
@@ -190,9 +173,9 @@
                 </div>
 
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con4.jpg" alt="">
+                        <img src="img/concentration/con4s.jpg" alt="">
                         <div class="hover-content">
                             <a href="img/bg-img/10.jpg" class="portfolio-img">4</a>
                         </div>
@@ -200,9 +183,9 @@
                 </div>
 
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
+                <div id="mustbecol1" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms" style="left: 0% !important;">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con5.png" alt="">
+                        <img src="img/concentration/con5ss.jpg" alt="">
                         <div class="hover-content">
                             <a href="img/bg-img/37.jpg" class="portfolio-img">5</a>
                         </div>
@@ -210,29 +193,9 @@
                 </div>
 
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="700ms">
+                <div id="mustbecol2" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/9.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/9.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/5.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con6.png" alt="">
+                        <img src="img/concentration/con6ss.jpg" alt="">
                         <div class="hover-content">
                             <a href="img/bg-img/5.jpg" class="portfolio-img">6</a>
                         </div>
@@ -240,17 +203,7 @@
                 </div>
 
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-30 wow fadeInUp" data-wow-delay="500ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/bg-img/5.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div id="mustbecol3" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con7.png" alt="">
                         <div class="hover-content">
@@ -260,36 +213,27 @@
                 </div>
 
                 <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div id="mustbecol4" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con8.png" alt="">
+                        <img src="img/concentration/con8s.png" alt="">
                         <div class="hover-content">
                             <a href="img/bg-img/5.jpg" class="portfolio-img">8</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/bg-img/5.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="img/bg-img/5.jpg" class="portfolio-img">+</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con9.png" alt="">
+                        <img src="img/concentration/con9s.png" alt="">
                         <div class="hover-content">
                             <a href="img/bg-img/5.jpg" class="portfolio-img">9</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="500ms">
+                <div id="mustbecol2" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/concentration/con10.png" alt="">
+                        <img src="img/concentration/con10s.png" alt="">
                         <div class="hover-content">
                             <a href="img/bg-img/5.jpg" class="portfolio-img">10</a>
                         </div>
