adventures in css continue with media-specific resizing!

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <style>
+    @media only screen and (min-width: 1240px) {
       #mustbecol1[style] {
         left: 0% !important;
       }
@@ -25,6 +26,7 @@
       #mustbecol4[style] {
         left: 74.9999% !important;
       }
+    }
     </style>
 </head>
 
