--- a/portfolio.html
+++ b/portfolio.html
@@ -150,7 +150,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/concentration/con1s.png" alt="">
                         <div class="hover-content">
-                            <a href="concentration/1.html" class="portfolio-img">1</a>
+                            <a href="concentration/1.html">1</a>
                         </div>
                     </div>
                 </div>
