more fixes idk stuff

--- a/concentration/1.html
+++ b/concentration/1.html
@@ -11,10 +11,10 @@
     <title>Alime - Photography HTML Template</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../img/core-img/favicon.png">
+    <link rel="icon" href=".././img/core-img/favicon.png">
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style.css">
 
 </head>
 
