--- a/concentration/1.html
+++ b/concentration/1.html
@@ -395,15 +395,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Shann
 
     <!-- **** All JS Files ***** -->
     <!-- jQuery 2.2.4 -->
-    <script src="js/jquery.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
     <!-- Popper -->
-    <script src="js/popper.min.js"></script>
+    <script src="../js/popper.min.js"></script>
     <!-- Bootstrap -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <!-- All Plugins -->
-    <script src="js/alime.bundle.js"></script>
+    <script src="../js/alime.bundle.js"></script>
     <!-- Active -->
-    <script src="js/default-assets/active.js"></script>
+    <script src="../js/default-assets/active.js"></script>
 
 </body>
 
