--- a/concentration10.html
+++ b/concentration10.html
@@ -12,23 +12,7 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-    <style>
-    @media only screen and (min-width: 840px) {
-      #mustbecol1[style] {
-        left: 0% !important;
-      }
-      #mustbecol2[style] {
-        left: 25% !important;
-      }
-      #mustbecol3[style] {
-        left: 49.9999% !important;
-      }
-      #mustbecol4[style] {
-        left: 74.9999% !important;
-      }
-    }
 
-    </style>
 </head>
 
 <body>
@@ -84,7 +68,7 @@
                             <div class="classynav">
                                 <ul id="nav">
                                     <li><a href="./index.html">Home</a></li>
-                                    <li class="active"><a href="./portfolio.html">Portfolio</a>
+                                    <li><a href="./portfolio.html">Portfolio</a>
                                     </li>
                                     <li><a href="./about.html">About</a></li>
                                     <li><a href="./gallery.html">Résumé</a></li>
@@ -107,146 +91,28 @@
             </div>
         </div>
     </header>
+    <!-- Header Area End -->
 
-    <!-- Breadcrumb Area Start -->
-    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url(img/bg-img/portfolio.png);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">Portfolio</h2>
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center">
-                                <li class="breadcrumb-item"><a href="index.html"><i class="icon_house_alt"></i> Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Portfolio</li>
-                            </ol>
-                        </nav>
+
+    <!-- About Us Area Start -->
+    <div class="about-us-area section-padding-80-0 clearfix"><br>
+        <div class="container">
+            <div class="row align-items-center">
+              <div class="col-12 col-lg-12">
+                  <div class="about-us-content mb-80">
+                      <h3 class="wow fadeInUp" data-wow-delay="100ms">No. 10: Lorem Ipsum</h3>
+                      <div class="line wow fadeInUp" data-wow-delay="200ms"></div>
+                      <img src="img/concentration/con10.png" alt="">
+                        <br>
+                        <br>
+                        <p class="wow fadeInUp" data-wow-delay="300ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
+                        <p class="wow fadeInUp" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <!-- Breadcrumb Area End -->
-    <!-- Gallery Area Start -->
-    <div class="alime-portfolio-area section-padding-80 clearfix">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <!-- Projects Menu -->
-                    <div class="alime-projects-menu">
-                        <div class="portfolio-menu text-center">
-                            <button class="btn active" data-filter="*">All</button>
-                            <button class="btn" data-filter=".portfolio">Portfolio</button>
-                            <button class="btn" data-filter=".breadth">AP Studio Art 2D: Breadth</button>
-                            <button class="btn" data-filter=".concentration">AP Studio Art 2D: Concentration</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row alime-portfolio">
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con1s.png" alt="">
-                        <div class="hover-content">
-                            <a href="concentration1.html">1</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con2s.png" alt="">
-                        <div class="hover-content">
-                            <a href="concentration2.html">2</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con3s.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="concentration3.html">3</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con4s.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="concentration4.html">4</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div id="mustbecol1" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms" style="left: 0% !important;">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con5ss.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="concentration5.html">5</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div id="mustbecol2" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con6ss.jpg" alt="">
-                        <div class="hover-content">
-                            <a href="concentration6.html">6</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div id="mustbecol3" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con7.png" alt="">
-                        <div class="hover-content">
-                            <a href="concentration7.html">7</a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Single Gallery Item -->
-                <div id="mustbecol4" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con8s.png" alt="">
-                        <div class="hover-content">
-                            <a href="concentration8.html">8</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con9s.png" alt="">
-                        <div class="hover-content">
-                            <a href="concentration9.html">9</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="mustbecol2" class="col-12 col-sm-6 col-lg-3 single_gallery_item concentration mb-30 wow fadeInUp" data-wow-delay="300ms">
-                    <div class="single-portfolio-content">
-                        <img src="img/concentration/con10s.png" alt="">
-                        <div class="hover-content">
-                            <a href="concentration10.html">10</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
-    <!-- Gallery Area End -->
+    <!-- About Us Area End -->
 
     <!-- Follow Area Start -->
     <section class="follow-area clearfix">
